--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 </center>
 </div>
 
-<iframe width=0 height=0 src=https://www.youtube.com/embed/xjBTNbEXbAA?autoplay=1 title=YouTube video player frameborder=0 allow=accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen></iframe>
-
+<audio controls autoplay style="display:none;">
+  <source src="videoplayback.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
 <script>
 
